Split page block codec and cursor
Signed-off-by: Sagi Bashari <sagi@varve.io>